#### Don't forget to change the version number in configure.ac! ####

02 Sep 2004 Re-enable build without dynamic loading suppt - Ivan Warren
28 Aug 2004 SCSI tape mods part 1 (cont'd): don't retreive tape status
            until it's actually needed for error determination - Fish
27 Aug 2004 Removed all conditional and cast lvalues to accomodate for
            gcc 3.4 and beyond - Ivan Warren
19 Aug 2004 Suspend/resume loadparm value - Christopher by Greg Smith
19 Aug 2004 cckd fix: Honor readonly option on sf- to base file - Greg Smith
18 Aug 2004 cckd fixes: possible sf- corruption, messages - Greg Smith
16 Aug 2004 DAT-enhancement facility: IDTE instruction - Roger Bowler
10 Aug 2004 Fix dasdcopy to large ckd file - Fish & Greg
04 Aug 2004 PIC1 all ALRF only instructions when ALRF disabled
            Also fix code limit for ESTA - Ivan Warren
30 Jul 2004 SCSI tape mods part 1: Auto-detect SCSI tape mounts - Fish
30 Jul 2004 Fix bug in bldcfg that was causing device initialization
            failures to not abort Herc statup as they should -- Fish
30 Jul 2004 Make config symbol sub more generalized - Ivan Warren
30 Jul 2004 SIE Perf boost patch correction for pending irpts - Ivan Warren
28 Jul 2004 Remove opctab from run_cpu stack - Greg Smith
28 Jul 2004 Some more SIE perf updates - Ivan Warren P/O Greg Smith
27 Jul 2004 SIE Perf boost. Look for string ISW20040727 to revert - Ivan Warren
27 Jul 2004 SR Fix affecting suspended CCWs - Ivan Warren P/O Greg Smith
26 Jul 2004 Hercules suspend/resume command support - Greg Smith
26 Jul 2004 Clear PSW Bit 12 when switching to ESAME via SIGP - Ivan Warren
26 Jul 2004 Added ASN_AND_LX_REUSE config statement - Ivan Warren
25 Jul 2004 cfba fixes (I hope) - Greg Smith
23 Jul 2004 DAT-enhancement facility: CSPG instruction - Roger Bowler
22 Jul 2004 Fix 370 address lookup for USE_REAL_ADDR - Greg Smith
22 Jul 2004 Activate ASN-and-LX-reuse facility - Roger Bowler